Post data from raspi

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,30 @@
-Hello World!
+<html>
+    <head>
+        <title>Enseak 2015</title>
+
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <div id="map"></div>
+        <div id="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Ville</th>
+                        <th>Consommation de la ville</th>
+                        <th>Energie renouvelable</th>
+                        <th>Energie exploitable</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Paris</th>
+                        <td>3965300.5</td>
+                        <td>10%</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </body>
+</html>
