--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,17 @@
                         <th>Ville</th>
                         <th class="num">Population</th>
                         <th class="num">Consommation de la ville (kWh/an)</th>
-                        <th class="num">Energie renouvelable (%)</th>
-                        <th class="num">Energie renouvelable exploitable (%)</th>
+                        <th class="num">Energie solaire &amp; éolien (%)</th>
+                        <th class="num">Energie solaire &amp; éolien exploitable (%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="cityName">Paris</td>
-                        <td class="num" id="cityPopulation">3965300.5</td>
-                        <td class="num" id="cityUptake">3965300.5</td>
-                        <td class="num" id="cityRenew">10%</td>
-                        <td class="num" id="cityRenewPossible">18%</td>
+                        <td id="cityName">...</td>
+                        <td class="num" id="cityPopulation"></td>
+                        <td class="num" id="cityUptake"></td>
+                        <td class="num" id="cityRenew"></td>
+                        <td class="num" id="cityRenewPossible"></td>
                     </tr>
                 </tbody>
             </table>
