Fix background + fix when table to support 2 lines in thead

--- a/public/chart.html
+++ b/public/chart.html
@@ -6,6 +6,7 @@
 
         <style>
             html, body {
+                background: #fff;
                 font-family: sans-serif;
                 height: 100%;
                 margin: 0;
