--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 
     <body>
         <div id="shadow" style="display: none;"></div>
+        <div id="frame-container">
+            <div id="back">&lsaquo;</div>
+            <iframe id="frame" src="" frameborder="0"></iframe>
+        </div>
         <div id="map"></div>
         <div id="table">
             <div id="loader">
