--- a/public/chart.html
+++ b/public/chart.html
@@ -22,11 +22,6 @@
                 text-align: center;
             }
 
-            h1 a {
-                color: #2196F3;
-                text-decoration: none;
-            }
-
             #graph {
                 height: calc(100% - 57px);
                 margin: 0 auto;
@@ -36,7 +31,7 @@
     </head>
 
     <body>
-        <h1><a href="/">&lsaquo;</a> Graphique d'efficacité solaire/éolien - <span id="cityName"></span></h1>
+        <h1>Graphique d'efficacité solaire/éolien - <span id="cityName"></span></h1>
         <div id="graph"></div>
 
         <script src="/socket.io/socket.io.js"></script>
